Hotels Search Landing: Made all buttons go to signup form and default Miami on the search forms --GH

--- a/search/hotels/index.html
+++ b/search/hotels/index.html
@@ -165,7 +165,7 @@
             <div class="card-body p-3">
                 <div class="input-group mb-1">
                     <span class="input-group-text rounded-0 bg-light search-form-input-icon border-0"><i class="fas fa-bed mx-auto"></i></span>
-                    <input type="text" name="dslp_hcity" value="" required id="modal_location"
+                    <input type="text" name="dslp_hcity" value="Miami" required id="modal_location"
                            class="form-control rounded-0 border-0 bg-light form-control-lg search-form-input-city" placeholder="Enter a city, hotel, airport, address..." aria-label="Username" aria-describedby="basic-addon1">
                 </div>
                 <div class="input-group mb-1 daysInputsContainer">
@@ -189,7 +189,7 @@
                 <div class="card-title form-card-title">Find hotel deals</div>
                 <div class="input-group mb-1">
                     <span class="input-group-text rounded-0 bg-light search-form-input-icon border-0"><i class="fas fa-bed mx-auto"></i></span>
-                    <input type="text" name="dslp_hcity" value="" required id="location_input" class="form-control rounded-0 border-0 bg-light form-control-lg search-form-input-city" placeholder="Enter a city, hotel, airport, address..." aria-label="Username" aria-describedby="basic-addon1">
+                    <input type="text" name="dslp_hcity" value="Miami" required id="location_input" class="form-control rounded-0 border-0 bg-light form-control-lg search-form-input-city" placeholder="Enter a city, hotel, airport, address..." aria-label="Username" aria-describedby="basic-addon1">
                 </div>
                 <div class="input-group mb-1 daysInputsContainer">
                     <span class="input-group-text rounded-0 bg-light search-form-input-icon border-0"><i class="fas fa-calendar-alt mx-auto"></i></span>
@@ -299,7 +299,7 @@
                                         </div>
                                         <div class="break d-block d-md-none"></div>
                                         <div class="align-self-center text-center w-50-sm-100">
-                                                <a class="js-scroll-trigger btn btn-outline-top mx-auto px-3 py-2 rounded-0 btn-big-cards" href="javascript:void(0);" onclick="document.body.scrollTop = document.documentElement.scrollTop = 0;">SEARCH NOW</a>
+                                            <a class="js-scroll-trigger btn btn-outline-top mx-auto px-3 py-2 rounded-0 btn-big-cards js-action-signup" href="">SEARCH NOW</a>
                                         </div>
                                     </div>
                                 </div>
@@ -358,7 +358,7 @@
                                         </div>
                                         <div class="break d-block d-md-none"></div>
                                         <div class="align-self-center text-center w-50-sm-100">
-                                                <a class="js-scroll-trigger btn btn-outline-top mx-auto px-3 py-2 rounded-0 btn-big-cards" href="javascript:void(0);" onclick="document.body.scrollTop = document.documentElement.scrollTop = 0;">SEARCH NOW</a>
+                                                <a class="js-scroll-trigger btn btn-outline-top mx-auto px-3 py-2 rounded-0 btn-big-cards js-action-signup" href="">SEARCH NOW</a>
                                         </div>
                                     </div>
                                 </div>
@@ -416,7 +416,7 @@
                                             </div>
                                             <div class="break d-block d-md-none"></div>
                                             <div class="align-self-center text-center w-50-sm-100">
-                                                    <a class="js-scroll-trigger btn btn-outline-top mx-auto px-3 py-2 rounded-0 btn-big-cards" href="javascript:void(0);" onclick="document.body.scrollTop = document.documentElement.scrollTop = 0;">SEARCH NOW</a>
+                                                    <a class="js-scroll-trigger btn btn-outline-top mx-auto px-3 py-2 rounded-0 btn-big-cards js-action-signup" href="">SEARCH NOW</a>
                                             </div>
                                         </div>
                                     </div>
@@ -494,9 +494,7 @@
                 <div class="perfect-checklist-item mb-3"><i class="fas fa-check"></i> Over 500,000 properties world wide</div>
                 <div class="perfect-checklist-item mb-3"><i class="fas fa-check"></i> Save thousands with hot deals</div>
                 <div class="perfect-checklist-item mb-4"><i class="fas fa-check"></i> Register for exclusive access to private deals</div>
-                <button class="btn btn-primary py-2 btn-block font-weight-bold rounded-0"
-                onclick="document.body.scrollTop = document.documentElement.scrollTop = 0;"
-                >Search Hotels</button>
+                <a href="" class="btn btn-primary py-2 btn-block font-weight-bold rounded-0 js-action-signup">Search Hotels</a>
             </div>
         </div>
 
@@ -582,7 +580,7 @@
                                 <h2 class="text-white mb-0 text-uppercase adventure-plan text-shadow-sm">Plan an adventure</h2>
                         </div>
                         <div class="align-self-center text-center w-50">
-                                <a class="js-scroll-trigger btn btn-outline-top mx-auto px-3 py-2 rounded-0 btn-big-cards" href="javascript:void(0);" onclick="document.body.scrollTop = document.documentElement.scrollTop = 0;">SEARCH NOW</a>
+                                <a class="js-scroll-trigger btn btn-outline-top mx-auto px-3 py-2 rounded-0 btn-big-cards js-action-signup" href="">SEARCH NOW</a>
                         </div>
                     </div>
                 </div>
@@ -946,7 +944,7 @@
                         </div>
                         <div class="break d-block d-md-none"></div>
                         <div class="align-self-center text-center w-50-sm-100">
-                                <a class="js-scroll-trigger btn btn-outline-top mx-auto px-3 py-2 rounded-0 btn-big-cards" href="javascript:void(0);" onclick="document.body.scrollTop = document.documentElement.scrollTop = 0;">SEARCH NOW</a>
+                                <a class="js-scroll-trigger btn btn-outline-top mx-auto px-3 py-2 rounded-0 btn-big-cards js-action-signup" href="">SEARCH NOW</a>
                         </div>
                     </div>
                 </div>
@@ -1138,7 +1136,7 @@
           <div id="hero-img" data-src="/img/search/hero_phone_image.png"></div>
           <div id="hero-text" class="text-uppercase">
             Our best <br>prices <span id="ever">ever</span> <br>
-            <button type="button" id="search-btn" onclick="document.body.scrollTop = document.documentElement.scrollTop = 0;" class="btn btn-outline-light d-block mt-3 mt-md-4 py-2 py-lg-3 px-lg-4 text-white rounded-0"><i class="fas fa-search"></i> Search Now</button>
+            <a id="search-btn" href="" class="btn btn-outline-light d-inline-block mt-3 mt-md-4 py-2 py-lg-3 px-lg-4 text-white rounded-0 text-capitalize js-action-signup"><i class="fas fa-search"></i> Search Now</a>
           </div>
         </div>
       </div>
@@ -1286,7 +1284,7 @@
               }else{
                   (document.getElementById('locID') || {}).value = '';
                   (document.getElementById('featuredHotelID') || {}).value = '';
-                  var tmp_url = '/app/endpoints/autosuggest-hotels-V2.php?debug';
+                  var tmp_url = 'https://globaltrips.com/app/endpoints/autosuggest-hotels-V2.php?debug';
                   tmp_url += (tmp_url.indexOf('?') > 0) ?('&query='+encodeURIComponent(term)):('?query='+encodeURIComponent(term));
                   autoCompleteXHR = new XMLHttpRequest();
                   autoCompleteXHR.open('GET',tmp_url,true);
